package models;

public enum Colors {
    BLUE, GREEN, YELLOW, PINK
}
