package models;

public enum Lands {
    WATER,
    FOREST,
    WHEAT,
    GRASS,
    SWAMP,
    MINE,
    CASTLE
}
