package models;

public enum Orientations {
    NORTH,
    SOUTH,
    EAST,
    WEST
}
