package v1.models;

public interface GameObserver {

    void reactGame(Game game);

}
