package views;

import models.Game;

public class EndMenu {

    private Game game;

    public EndMenu(Game game) {
        this.game = game;
    }
}
